data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_1990.wast
;; 1. **Test Description**: Check behavior when `if` condition is false and `br_table` has an out-of-bounds index.    - **Constraint**: Validate that the `if` condition false path correctly handles an out-of-bounds `br_table` index.    - **Relation to Edge Case**: Ensures that the implementation correctly triggers a trap or correct behavior when `br_table` target indexes are outside the permissible range.

(assert_invalid
  (module (func $if-false-br_table-out-of-bounds
    (i32.const 0)
    (if (result i32)
      (i32.const 0)
      (then (i32.const 1))
      (else (br_table 1 2 3 (i32.const 4)))
    )
  ))
  "index out of bounds"
)